--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^8.3.6",
+    "ag-grid": "^18.1.2",
+    "ag-grid-community": "^34.3.1",
+    "ag-grid-react": "^34.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
