--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "ag-grid": "^18.1.2",
     "ag-grid-community": "^34.3.1",
     "ag-grid-react": "^34.3.1",
+    "dayjs": "^1.11.19",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
