--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
     "ag-grid-react": "^34.3.1",
     "dayjs": "^1.11.19",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
